# A-STRA

./: .env.example  .gitignore  PLUGIN_GUIDE.md  README.md  ReadMe.md  __init__.py  config.json  conftest.py  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
.github/workflows/: astra-v2-ci.yml
API/: __init__.py
API/client/: __init__.py  auth_adapters.py  base_client.py  websocket_client.py
API/openapi/: __init__.py  spec_loader.py
API/tests/: test_users_api.py
ASTRA-v2/: .env.example  Jenkinsfile  README.md  config.json  conftest.py  main.py
Asearch/: __init__.py
Prism_view/: __init__.py
codegen/: __init__.py  apiCodeGenerator.ts  api_code_generator.py  uiCodeGenerator.ts  ui_code_generator.py
core/: __init__.py  schemaBuilder.ts  schema_builder.py
corporate_slate/: .gitkeep
docs/: CORPORATE_STANDARDS_GUIDE.md  archive_connect_astra_session.md
examples/: shadow_coding_corporate_example.py
preflight/: __init__.py  antiBotAnalyser.ts  anti_bot_analyser.py  bearerTokenAnalyser.ts  bearer_token_analyser.py  domAnalyser.ts  dom_analyser.py  healthCheck.orchestrator.ts  health_check_orchestrator.py  networkInterceptorAnalyser.ts  network_interceptor_analyser.py
runners/: __init__.py
schemas/: __init__.py  fieldSchema.interface.ts  field_schema.py
tests/: __init__.py
utils/: __init__.py  envLoader.ts  env_loader.py  logger.py  logger.ts  reportGenerator.ts  report_generator.py  schemaReconciler.ts  schemaResolver.ts  schema_reconciler.py  schema_resolver.py
(+139 files in other folders)
